residency pages content & setup in partial

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,7 @@
-baseURL = "http://example.org/"
+baseURL = "/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Laboratory - Interactive, Digital, Performance Art"
+
+[params]
+residency_phrase = "Come spend 1 - 3 months making awesome stuff"
 
