--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,9 @@ baseURL = "/"
 languageCode = "en-us"
 title = "Laboratory - Interactive, Digital, Performance Art"
 
+[context.production.environment]
+  HUGO_VERSION = "0.49"
+
 [params]
 residency_phrase = "Come spend 1 - 3 months making awesome stuff"
 
